# roam-bot

./: .dockerignore  Dockerfile  Makefile  README.md  main.py  mapSolarSystems.csv  pyproject.toml  requirements.txt  setup.cfg  skyhooks.yaml  stagings.yaml  stagings.yml
.githooks/: pre-commit
.github/workflows/: pr.yaml
src/: functions.py  main.py
src/roam_bot/: EVE_DATA.py  __init__.py  connect.py  functions.py  lossboard.py  roam.py  system_map.py  wormhole.py
tests/: test_main.py
