[project]
name = "roam-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Austin" }
]
requires-python = ">=3.14"
dependencies = [
    "click==8.3.1",
    "aiohttp>=3.13.2", # build issue with 3.11.13
    "discord-py==2.6.4",
    "pyyaml==6.0.3",
    "requests==2.33.0",
]

[project.scripts]
roam-bot = "roam_bot:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.5",
]
